<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundDetail"
    app:behavior_overlapTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timestamp" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="24sp" />

        <TextView
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:mapbox_cameraTargetLat="-3"
            app:mapbox_cameraTargetLng="111"
            app:mapbox_cameraZoom="15" />

        <android.widget.Button
            android:textColor="@color/white"
            android:id="@+id/btn_delete"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_corners_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_report"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>